# ML-Docker-Orchestrator-with-full-MLops-pipeline

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changelog.MD  Dockerfile  Dockerfile.monitor  README.md  SECURITY.md  deployment.yaml  docker-compose.yml  network-policy.yaml  package.json  platform_monitor.py  pyproject.toml  requirements-dev.txt  requirements-runtime.txt  requirements.txt  service.yaml
.github/workflows/: cd.yml  ci.yml  release.yml  security.yml
benchmarks/: benchmark_report.md  run_benchmark.py
docs/: ARCHITECTURE.md  AUDIT.md  DEPLOYMENT.md  PERFORMANCE.md  PRODUCTION_CHECKLIST.md
src/orchestrator/: api.py  config.py  model.py
terraform/: main.tf
tests/: test_benchmark.py  test_production.py
