[build-system]
requires = ["setuptools>=80.9,<81", "wheel>=0.46.2,<0.47"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-docker-orchestrator"
version = "1.0.0"
description = "Reproducible ML orchestration API with Docker and observable deployment controls"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Corey Leath"}]
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["app", "model", "platform_monitor.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
timeout = 30
addopts = "-ra --strict-markers --cov=orchestrator.api --cov=orchestrator.model --cov=orchestrator.config --cov=orchestrator.metrics --cov-branch --cov-report=term-missing --cov-report=xml --cov-fail-under=90"

[tool.coverage.report]
show_missing = true
exclude_also = [
  "class RegistryPredictor",
]
